Updated an incorrect url in the collaborators page.

--- a/tnrs-standalone/src/main/webapp/collaborators.html
+++ b/tnrs-standalone/src/main/webapp/collaborators.html
@@ -96,7 +96,7 @@
 				<img src="images/gni.png" alt="The Global Name Index" title="The Global Name Index"/>
 			</td>
 			<td>
-				<a href="http://www.gni.globalnames.org">The Global Names Index</a>
+				<a href="http://gni.globalnames.org">The Global Names Index</a>
 			</td>
 		</tr>
 		<tr>
