Webpage text changes Added publication to the frontpage Added Large job case in optimize

--- a/tnrs-standalone/src/main/webapp/index.html
+++ b/tnrs-standalone/src/main/webapp/index.html
@@ -80,7 +80,7 @@ jQuery('a#mailinglist').colorbox(
 
 <body class="home" onload="removeImg()">
 
-    <noscript><img src="http://iplantcollaborative.org/sites/all/themes/iplant/images/iplant_logo.png"><br/></img><h1>This site requires Javascript. Please enable it.</h1></noscript>
+    <noscript><img src="http://iplantcollaborative.org/sites/all/themes/iplant/images/iplant_logo.png"><br/><h1>This site requires Javascript. Please enable it.</h1></noscript>
   <div class="header"> 
         <span id="logo">
         <img src="images/iplant_logo.png" alt= "iPlant Collaborative" /> 
@@ -112,12 +112,13 @@ jQuery('a#mailinglist').colorbox(
 
                 <div   style="padding-left:500px;">
                     <h3 class="welcome">Welcome to the Taxonomic Name Resolution Service, a free utility for correcting and standardizing plant names.</h3><br />
+                    <p><strong><a href="http://dx.doi.org/10.1186/1471-2105-14-16" target="_blank">New! - Read the TNRS article in <i>BMC Bioinformatics</i></a></strong></p>
                     <p><a href="quick_start.html">Quick guide to using the TNRS</a></p>
                     <p><a href="optimize.html">Optimize your search</a></p>
                     <p><a href="features.html#Known_Issues">Known issues</a></p>
-					<p><a href="http://www.nature.com/news/2011/110613/full/474263a.html">Read about TNRS in Nature</a></p>
-					<p><a href="https://forums.iplantcollaborative.org/viewforum.php?f=9&sid=37dfe221875533b19131e3fbd8d33ae7">Help and Discussion Forum</a></p>
-                    <a href="TNRSapp.html"> <img src="images/tryitnowbutton.jpg" alt="Try it now!" /></a>
+					<p><a href="http://www.nature.com/news/2011/110613/full/474263a.html" target="_blank">Read about TNRS in Nature</a></p>
+					<p><a href="http://ask.iplantcollaborative.org/questions/scope%3Aall/sort%3Arelevance-desc/query%3Atnrs/" target="_blank">Help and Discussion Forum</a></p>
+                    <a href="TNRSapp.html"> <img src="images/tryitnowbutton.jpg" width='200px' alt="Try it now!" /></a>
                     
                     <div>
                     <div class="stuff clearfix">
