--- a/tnrs-standalone/src/main/webapp/features.html
+++ b/tnrs-standalone/src/main/webapp/features.html
@@ -15,7 +15,7 @@
         <img src="images/iplant_logo.png" alt="iPlant Collaborative" /> 
       </span>
     <div class="subheader">
-<span>Taxonomic Name Resolution Service</span> <span style="font-size: 24px;">v3.0</span>
+<span>Taxonomic Name Resolution Service</span> <span style="font-size: 24px;">v3.1</span>
     </div>
   </div>
 
@@ -43,7 +43,7 @@
 				<h3>Underscores</h3>
 				<p>Underscores in submitted names are stripped to allow parsing of the names which have been prepared for use in applications that prohibit spaces, such as Phylocom. If you have an underscore that is intended to be part of the submitted name, your results may be returned incorrectly (for example, an accession number such as "Smith_5644" or a morphospecies name such as "Lauraceae gen_indet._1").</p>
 				<h3>Submitted name not matching name in results</h3>
-				<p>Some of the submitted names displayed in your TNRS results, returned in the download file, or via the TNRS API may not match back to your original file or database of names. This is because the TNRS removes leading and trailing whit spaces, changes underscores to whitespace, and converts characters such as quotation marks which may cause problems with our application. Submitted names which fail to match can be difficult to spot and may prevent you from programmatically joining your TNRS results back to your original database. We are working on a fix which will return the verbatim name submitted. In the meantime, if you find that some of the results are not matching to your original names, we suggest you use an integer to uniquely identify each name in your original database. You should include this identifier with each name that you submit to the TNRS. The identifier must appear in front of each name, followed by a tab, as follows:</p>
+				<p>Some of the submitted names displayed in your TNRS results, returned in the download file, or via the TNRS API may not match back to your original file or database of names. This is because the TNRS removes leading and trailing white spaces, changes underscores to whitespace, and converts characters such as quotation marks which may cause problems with our application. Submitted names which fail to match can be difficult to spot and may prevent you from programmatically joining your TNRS results back to your original database. We are working on a fix which will return the verbatim name submitted. In the meantime, if you find that some of the results are not matching to your original names, we suggest you use an integer to uniquely identify each name in your original database. You should include this identifier with each name that you submit to the TNRS. The identifier must appear in front of each name, followed by a tab, as follows:</p>
 				1 < tab > name</br>
 				2 < tab > anothername</br>
 				3 < tab > yetanothername</br></br>
